ENV with properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,15 +1,15 @@
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.properties.hibernate.dialect=${JPA_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.hibernate.ddl-auto=${JPA_DDL: create}
 spring.datasource.initialization-mode=always
 spring.datasource.continue-on-error=true
-spring.datasource.url=jdbc:h2:mem:personal_data
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.datasource.url=${DS_URL:jdbc:h2:mem:personal_data}
+spring.datasource.driverClassName=${DS_DRIVER:org.h2.Driver}
+spring.datasource.username=${DS_USERNAME:sa}
+spring.datasource.password=${DS_PASSWORD:password}
+spring.jpa.database-platform=${PLATFORM:org.hibernate.dialect.H2Dialect}
 spring.h2.console.enabled=true
 spring.servlet.multipart.max-file-size=15MB
 spring.servlet.multipart.max-request-size=15MB
-server.port=8090
+server.port=${PORT:8090}
 
 
